--- a/tasks.html
+++ b/tasks.html
@@ -29,7 +29,13 @@
           </li>
         </ul>
       </nav>
-
+      <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="checkbox">
+     <input type="checkbox" id="checkbox"/>
+     <div class="slider round"></div>
+   </label>
+     <em id="dark-light">Switch themes</em>
+   </div>
     <div class="row">
           <div class="tasks">
               <h4>Write a blog</h4> 
@@ -97,6 +103,6 @@
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-      <script src="static/JS/index.js"></script>
+      <script src="static/JS/tasks.js"></script>
 </body>
 </html>
