--- a/tasks.html
+++ b/tasks.html
@@ -36,12 +36,28 @@
    </label>
      <em id="dark-light">Switch themes</em>
    </div>
+
+   <div class="filter">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">All Tasks</label>
+
+    <p></p>
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+<label class="form-check-label" for="exampleCheck1">Code</label>
+<p></p>
+<input type="checkbox" class="form-check-input" id="exampleCheck1">
+<label class="form-check-label" for="exampleCheck1">Design</label>
+<p></p>
+<input type="checkbox" class="form-check-input" id="exampleCheck1">
+<label class="form-check-label" for="exampleCheck1">Explore</label>
+  </div>
+
     <div class="row">
           <div class="tasks">
               <h4>Write a blog</h4> 
               <p> Create a blog about history of Robotics to display on ACICTS BLOGS.  </p>
               <div class="buttons">
-              <button type="button" class="btn btn-success" id="catocery">Task Information</button>
+              <button type="button" class="btn btn-success" id="catocery"> <a href="task-claimed.html">Task Information</a></button>
               <button type="button" class="btn btn-primary" id="catocery">Explore</button>
             </div>
           </div>
@@ -50,7 +66,7 @@
             <h4>Write a blog</h4> 
             <p> Create a blog about history of Robotics to display on ACICTS BLOGS.  </p>
             <div class="buttons">
-                <button type="button" class="btn btn-success" id="catocery">Task Information</button>
+                <button type="button" class="btn btn-success" id="catocery"><a href="task-claimed.html">Task Information</a></button>
                 <button type="button" class="btn btn-primary" id="catocery">Explore</button>
               </div>
         </div>
@@ -59,7 +75,7 @@
             <h4>Write a blog</h4> 
             <p> Create a blog about history of Robotics to display on ACICTS BLOGS.  </p>
             <div class="buttons">
-                <button type="button" class="btn btn-success" id="catocery" > Task Information</button>
+                <button type="button" class="btn btn-success" id="catocery" > <a href="task-claimed.html">Task Information</a></button>
                 <button type="button" class="btn btn-primary" id="catocery">Explore</button>
               </div>
         </div>
@@ -68,7 +84,7 @@
             <h4>Write a blog</h4>
             <p> Create a blog about history of Robotics to display on ACICTS BLOGS.  </p> 
             <div class="buttons">
-                <button type="button" class="btn btn-success" id="catocery">Task Information</button>
+                <button type="button" class="btn btn-success" id="catocery"><a href="task-claimed.html">Task Information</a></button>
                 <button type="button" class="btn btn-primary" id="catocery">Explore</button>
               </div>
         </div>
@@ -77,27 +93,14 @@
             <h4>Write a blog</h4> 
             <p> Create a blog about history of Robotics to display on ACICTS BLOGS.  </p>
             <div class="buttons">
-                <button type="button" class="btn btn-success" id="catocery">Task Information</button>
+                <button type="button" class="btn btn-success" id="catocery"><a href="task-claimed.html">Task Information</a></button>
                 <button type="button" class="btn btn-primary" id="catocery">Explore</button>
               </div>
         </div>
         
       </div>
 
-      <div class="filter">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">All Tasks</label>
-
-        <p></p>
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Code</label>
-    <p></p>
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Design</label>
-    <p></p>
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Explore</label>
-      </div>
+      
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
