--- a/index.html
+++ b/index.html
@@ -1,57 +1,86 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bits 2020</title>
 
-    <script src= "https://code.jquery.com/jquery-3.4.1.min.js"> </script> 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bits 2020</title>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"> </script>
   <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="static/CSS/index.css">
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light">
-        <!-- Brand/logo -->
-        <a class="navbar-brand" href="index.html">BITS</a>
-        
-        <!-- Links -->
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">PROFILE</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="tasks.html">TASKS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">LEADERBOARD</a>
-          </li>
-        </ul>
-      </nav>
-    <div class="header">
-        <h1>Bits 2020</h1> 
-        <p>The Task Based Online
-            Intra-School ICT Competiton</p>
-        <button type="button" class="btn btn-primary">Register</button>
-        <section id="section04" class="demo">
-            <a href="#description"><span></span> <p>More Info</p> </a>
-        </section>
-    </div>
+  <nav class="navbar navbar-expand-sm bg-light navbar-light">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="index.html">BITS</a>
 
-    <div class="info">
-        <section id="description">
-            <h6>BITS, The Intra-School task-based ICT competition is organized by the Ananda College ICT Society
-                for the first time in Sri Lanka with the intention of providing a platform for our school students and polish
-                their IT knowledge in the different fields of ICT.</h6>
-        </section>
-    </div>
+    <!-- Links -->
+    <ul class="navbar-nav">
+      <!-- <li class="nav-item">
+        <a class="nav-link" href="#">PROFILE</a>
+      </li> -->
+      <li class="nav-item">
+        <a class="nav-link" href="tasks.html">TASKS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">LEADERBOARD</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="main">
+    <h1>BITS 2020</h1>
+    <p>The Task Based Online
+      Intra-School ICT Competiton</p>
+    <button type="button" class="btn btn-primary">Register</button>
+    <section class="icon-down">
+      <a href="#info">
+        <span class="material-icons">
+          arrow_downward
+        </span>
+      </a>
+    </section>
+  </div>
 
-       
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"></script>
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-      <script src="static/JS/index.js"></script>
+  <div class="logo">
+    <img src="./static/images/BITS-logo.gif">
+  </div>
+
+  <div class="info" id="info">
+    <section class="description">
+      <h6>BITS, The Intra-School task-based ICT competition is organized by the Ananda College ICT Society
+        for the first time in Sri Lanka with the intention of providing a platform for our school students and polish
+        their IT knowledge in the different fields of ICT.</h6>
+    </section>
+  </div>
+
+
+  <div class="team" id="team">
+    <h2>Team</h2>
+    <section class="team-description">
+      <h6>Chamindu</h6>
+      <h6>Chamuthu</h6>
+    </section>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous">
+  </script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  <script src="static/JS/index.js"></script>
 </body>
+
 </html>
