--- a/tasks.html
+++ b/tasks.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,22 +14,18 @@
 </head>
 
 <body>
-
-  <nav class="navbar navbar-expand-sm">
-    <!-- Brand/logo -->
-    <a class="navbar-brand" href="index.html">BITS</a>
-
-    <!-- Links -->
-    <ul class="navbar-nav">
-      <!-- <li class="nav-item">
-            <a class="nav-link" href="#">PROFILE</a>
-          </li> -->
-      <li class="nav-item">
-        <a class="nav-link" href="tasks.html">TASKS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">LEADERBOARD</a>
-      </li>
+  <nav>
+    <div>
+      <h1>
+        <a href="index.html"><img src="./static/images/BITS-logo-w.gif" alt="BITS" class="logo" /></a>
+      </h1>
+    </div>
+    <ul>
+      <li><a href="tasks.html">Tasks</a></li>
+      <li><a href="#">Online Test</a></li>
+      <li><a href="#">Leaderboard</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
     <div class="theme-switch-wrapper">
       <label class="theme-switch" for="checkbox">
@@ -62,7 +59,7 @@
       <p> Create a blog about history of Robotics to display on ACICTS BLOGS. </p>
       <div class="buttons">
         <a class="btn btn-success" href="task-claimed.html" id="catocery">Task
-            Information</a>
+          Information</a>
         <button type="button" class="btn btn-primary" id="catocery">Explore</button>
       </div>
     </div>
