--- a/index.html
+++ b/index.html
@@ -1,43 +1,39 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bits 2020</title>
-
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"> </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BITS 2020</title>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="static/CSS/index.css">
-  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="static/CSS/index.css" />
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet" />
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <!-- Brand/logo -->
-    <a class="navbar-brand" href="index.html">BITS</a>
-
-    <!-- Links -->
-    <ul class="navbar-nav">
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="#">PROFILE</a>
-      </li> -->
-      <li class="nav-item">
-        <a class="nav-link" href="tasks.html">TASKS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">LEADERBOARD</a>
-      </li>
+  <nav>
+    <div>
+      <h1>
+        <a href="index.html"><img src="./static/images/BITS-logo-w.gif" alt="BITS" class="logo" /></a>
+      </h1>
+    </div>
+    <ul>
+      <li><a href="tasks.html">Tasks</a></li>
+      <li><a href="#">Online Test</a></li>
+      <li><a href="#">Leaderboard</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
   </nav>
   <div class="main">
     <h1>BITS 2020</h1>
-    <p>The Task Based Online
-      Intra-School ICT Competiton</p>
+    <p>The Task Based Online Intra-School ICT Competiton</p>
     <button type="button" class="btn btn-primary">Register</button>
     <section class="icon-down">
       <a href="#info">
@@ -48,18 +44,18 @@
     </section>
   </div>
 
-  <div class="logo">
-    <img src="./static/images/BITS-logo.gif">
-  </div>
+  <!-- <div class="logo"> -->
+  <!-- <img src="./static/images/BITS-logo.gif" /> -->
+  <!-- </div> -->
 
   <div class="info" id="info">
     <section class="description">
-      <h6>BITS, The Intra-School task-based ICT competition is organized by the Ananda College ICT Society
-        for the first time in Sri Lanka with the intention of providing a platform for our school students and polish
-        their IT knowledge in the different fields of ICT.</h6>
+      <h6>
+        BITS, The First-Ever Task-Based Intra-School ICT competition, organized by the Ananda College ICT Society to
+        provide a platform for our school's students to polish and improve their ICT knowledge in many fields of ICT.
+      </h6>
     </section>
   </div>
-
 
   <div class="team" id="team">
     <h2>Team</h2>
