Responsive tasks page

--- a/tasks.html
+++ b/tasks.html
@@ -68,8 +68,8 @@
       <h4>Write a blog</h4>
       <p> Create a blog about history of Robotics to display on ACICTS BLOGS. </p>
       <div class="buttons">
-        <button type="button" class="btn btn-success" id="catocery"><a href="task-claimed.html">Task
-            Information</a></button>
+          <a class="btn btn-success" href="task-claimed.html" id="catocery">Task
+          Information</a>
         <button type="button" class="btn btn-primary" id="catocery">Explore</button>
       </div>
     </div>
@@ -78,8 +78,8 @@
       <h4>Write a blog</h4>
       <p> Create a blog about history of Robotics to display on ACICTS BLOGS. </p>
       <div class="buttons">
-        <button type="button" class="btn btn-success" id="catocery"> <a href="task-claimed.html">Task
-            Information</a></button>
+        <a class="btn btn-success" href="task-claimed.html" id="catocery">Task
+          Information</a>
         <button type="button" class="btn btn-primary" id="catocery">Explore</button>
       </div>
     </div>
@@ -88,8 +88,8 @@
       <h4>Write a blog</h4>
       <p> Create a blog about history of Robotics to display on ACICTS BLOGS. </p>
       <div class="buttons">
-        <button type="button" class="btn btn-success" id="catocery"><a href="task-claimed.html">Task
-            Information</a></button>
+          <a class="btn btn-success" href="task-claimed.html" id="catocery">Task
+          Information</a>
         <button type="button" class="btn btn-primary" id="catocery">Explore</button>
       </div>
     </div>
@@ -98,8 +98,8 @@
       <h4>Write a blog</h4>
       <p> Create a blog about history of Robotics to display on ACICTS BLOGS. </p>
       <div class="buttons">
-        <button type="button" class="btn btn-success" id="catocery"><a href="task-claimed.html">Task
-            Information</a></button>
+          <a class="btn btn-success" href="task-claimed.html" id="catocery">Task
+          Information</a>
         <button type="button" class="btn btn-primary" id="catocery">Explore</button>
       </div>
     </div>
