convereted webpage to jekyll

--- a/index.html
+++ b/index.html
@@ -1,82 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+title: BITS 2020 HOME
+css: static/CSS/index.css
+js: static/JS/index.js
+---
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BITS 2020</title>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="static/CSS/index.css" />
-  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet" />
-  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
+<div class="main">
+  <h1>BITS 2020</h1>
+  <p>The Task Based Online Intra-School ICT Competiton</p>
+  <button type="button" class="btn btn-primary">Register</button>
+  <section class="icon-down">
+    <a href="#info">
+      <span class="material-icons">
+        arrow_downward
+      </span>
+    </a>
+  </section>
+</div>
 
-<body>
-  <nav>
-    <div>
-      <h1>
-        <a href="index.html"><img src="./static/images/BITS-logo-w.gif" alt="BITS" class="logo" /></a>
-      </h1>
-    </div>
-    <ul>
-      <li><a href="tasks.html">Tasks</a></li>
-      <li><a href="#">Online Test</a></li>
-      <li><a href="#">Leaderboard</a></li>
-      <li><a href="#">Contact Us</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
-  </nav>
-  <div class="main">
-    <h1>BITS 2020</h1>
-    <p>The Task Based Online Intra-School ICT Competiton</p>
-    <button type="button" class="btn btn-primary">Register</button>
-    <section class="icon-down">
-      <a href="#info">
-        <span class="material-icons">
-          arrow_downward
-        </span>
-      </a>
-    </section>
-  </div>
+<!-- <div class="logo"> -->
+<!-- <img src="./static/images/BITS-logo.gif" /> -->
+<!-- </div> -->
 
-  <!-- <div class="logo"> -->
-  <!-- <img src="./static/images/BITS-logo.gif" /> -->
-  <!-- </div> -->
+<div class="info" id="info">
+  <section class="description">
+    <h6>
+      BITS, The First-Ever Task-Based Intra-School ICT competition, organized by the Ananda College ICT Society to
+      provide a platform for our school's students to polish and improve their ICT knowledge in many fields of ICT.
+    </h6>
+  </section>
+</div>
 
-  <div class="info" id="info">
-    <section class="description">
-      <h6>
-        BITS, The First-Ever Task-Based Intra-School ICT competition, organized by the Ananda College ICT Society to
-        provide a platform for our school's students to polish and improve their ICT knowledge in many fields of ICT.
-      </h6>
-    </section>
-  </div>
-
-  <div class="team" id="team">
-    <h2>Team</h2>
-    <section class="team-description">
-      <h6>Chamindu</h6>
-      <h6>Chamuthu</h6>
-    </section>
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous">
-  </script>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-  </script>
-  <script src="static/JS/index.js"></script>
-</body>
-
-</html>
+<div class="team" id="team">
+  <h2>Team</h2>
+  <section class="team-description">
+    <h6>Chamindu</h6>
+    <h6>Chamuthu</h6>
+  </section>
+</div>
