--- a/contact.html
+++ b/contact.html
@@ -72,11 +72,75 @@ change_theme: true
     </li>
     <li class="call">
         <h6>BITS OC</h6>
-        <h5>Chamindu Jayanath</h5>
+        <h5>Chamuthu</h5>
+        <hr>
+        <p class="contact">CONTACT</p>
+        <div class="social-icons" style="font-size: 0.5rem;">
+            <a class="social-icon social-icon--whatsapp" href="https://github.com/">
+              <i class="fab fa-whatsapp fa-xs"></i>
+              <div class="tooltip">WhatsApp</div>
+            </a>
+            <a class="social-icon social-icon--github" href="https://github.com/">
+              <i class="fab fa-github fa-xs" ></i>
+              <div class="tooltip">Github</div>
+            </a>
+            <a class="social-icon social-icon--telegram" href="https://github.com/">
+              <i class="fab fa-telegram fa-xs"></i>
+              <div class="tooltip">Telegram</div>
+            </a>
+            <a class="social-icon social-icon--slack" href="https://github.com/">
+              <i class="fab fa-slack fa-xs"></i>
+              <div class="tooltip">Slack</div>
+            </a>
+            <a class="social-icon social-icon--instagram" href="https://github.com/">
+              <i class="fab fa-instagram fa-xs"></i>
+              <div class="tooltip">Instagram</div>
+            </a>
+            <a class="social-icon social-icon--discord" href="https://github.com/">
+              <i class="fab fa-discord fa-xs"></i>
+              <div class="tooltip">Discord</div>
+            </a>
+            <a class="social-icon social-icon--call" href="https://github.com/">
+              <i class="fas fa-phone fa-xs"></i>
+              <div class="tooltip">call</div>
+            </a>
+          </div>
     </li>
     <li class="call">
         <h6>BITS OC</h6>
-        <h5>Chamindu Jayanath</h5>
+        <h5>?????</h5>
+        <hr>
+        <p class="contact">CONTACT</p>
+        <div class="social-icons" style="font-size: 0.5rem;">
+            <a class="social-icon social-icon--whatsapp" href="https://github.com/">
+              <i class="fab fa-whatsapp fa-xs"></i>
+              <div class="tooltip">WhatsApp</div>
+            </a>
+            <a class="social-icon social-icon--github" href="https://github.com/">
+              <i class="fab fa-github fa-xs" ></i>
+              <div class="tooltip">Github</div>
+            </a>
+            <a class="social-icon social-icon--telegram" href="https://github.com/">
+              <i class="fab fa-telegram fa-xs"></i>
+              <div class="tooltip">Telegram</div>
+            </a>
+            <a class="social-icon social-icon--slack" href="https://github.com/">
+              <i class="fab fa-slack fa-xs"></i>
+              <div class="tooltip">Slack</div>
+            </a>
+            <a class="social-icon social-icon--instagram" href="https://github.com/">
+              <i class="fab fa-instagram fa-xs"></i>
+              <div class="tooltip">Instagram</div>
+            </a>
+            <a class="social-icon social-icon--discord" href="https://github.com/">
+              <i class="fab fa-discord fa-xs"></i>
+              <div class="tooltip">Discord</div>
+            </a>
+            <a class="social-icon social-icon--call" href="https://github.com/">
+              <i class="fas fa-phone fa-xs"></i>
+              <div class="tooltip">call</div>
+            </a>
+          </div>
     </li>
   </ul>
 
