--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: BITS 2020 HOME
-css: static/CSS/tasks.css
-js: static/JS/tasks.js
+css: static/CSS/leaderboard.css
+js: static/JS/leaderboard.js
 change_theme: true
 ---
   
