--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@ change_theme: true
         <h5>Telegram</h5>
         <h6>Join our Telegram chat to ask any questions you have or to discuss with other participants</h6></li>
 
-    <li class="chat"><a href="https://github.com/"><i class="fas fa-envelope"></i></a> 
+    <li class="chat"><a href="mailto:bits20.acicts@gmail.com"><i class="fas fa-envelope"></i></a> 
         <h5>EMail</h5>
         <h6>Send us a private email regarding any issue you have or any feedback about the competition</h6></li>
 
@@ -46,7 +46,7 @@ change_theme: true
               <div class="tooltip">Github</div>
             </a>
             
-            <a class="social-icon social-icon--email" href="https://github.com/">
+            <a class="social-icon social-icon--email" href="mailto:chamindujs">
               <i class="fas fa-envelope fa-xs"></i>
               <div class="tooltip">EMail</div>
             </a>
@@ -58,7 +58,7 @@ change_theme: true
               <i class="fab fa-discord fa-xs"></i>
               <div class="tooltip">Discord</div>
             </a>
-            <a class="social-icon social-icon--call" href="https://github.com/">
+            <a class="social-icon social-icon--call" href="callto:0714477315">
               <i class="fas fa-phone fa-xs"></i>
               <div class="tooltip">call</div>
             </a>
