--- a/tasks.html
+++ b/tasks.html
@@ -21,7 +21,7 @@ change_theme: true
   <label class="form-check-label" for="exampleCheck1">Explore</label>
 </div>
 
-<div class="row task-list">
+<div class="row task-list" id="row1">
 
   {% for task in site.data.tasks %}
   <div class="tasks">
