--- a/about.html
+++ b/about.html
@@ -16,12 +16,27 @@ change_theme: true
 </div>
 
   <ul class="flex-container">
-    <li class="flex-item" style="background-color: rgb(63, 156, 231);">
+    <li class="flex-item">
+      <div class="container1">
+        <img src="https://i.imgur.com/FmEohvm.png" alt="Avatar" class="image">
+        <div class="overlay">
+          <p>Chamindu Jayanath</p>
+          <ul class="pros">
+            <li>Google Code-In 2019 Winner</li>
+            <li>Programmner</li>
+            <li>Web Developer</li>
+          </ul>
+        </div>
+      </div>
+      <h6>BITS ORGANIZING COMMITTEE</h6>
+    </li>
+
+    <li class="flex-item">
       <div class="container1">
         <img src="static/images/download.jpeg" alt="Avatar" class="image">
         <div class="overlay">
           <p>Chamindu Jayanath</p>
-          <ul>
+          <ul class="pros">
             <li>gci winnner</li>
             <li>Programmner</li>
             <li>Web developer</li>
@@ -31,31 +46,22 @@ change_theme: true
       <h6>BITS ORGANIZING COMMITTEE</h6>
     </li>
 
-    <li class="flex-item" style="background-color: rgb(63, 156, 231);">
+    <li class="flex-item">
       <div class="container1">
         <img src="static/images/download.jpeg" alt="Avatar" class="image">
-        <div class="overlay">Chamuthu</div>
+        <div class="overlay">
+          <p>Chamindu Jayanath</p>
+          <ul class="pros">
+            <li>Google Code-In 2019 Winner</li>
+            <li>Programmner</li>
+            <li>Web developer</li>
+          </ul>
+        </div>
       </div>
       <h6>BITS ORGANIZING COMMITTEE</h6>
     </li>
 
-    <li class="flex-item" style="background-color: rgb(17, 236, 163);">
-      <div class="container1">
-        <img src="static/images/download.jpeg" alt="Avatar" class="image">
-        <div class="overlay">My Name is John</div>
-      </div>
-      <h6>BITS ORGANIZING COMMITTEE</h6>
-    </li>
-
-    <li class="flex-item" style="background-color: rgb(17, 236, 163);">
-      <div class="container1">
-        <img src="static/images/download.jpeg" alt="Avatar" class="image">
-        <div class="overlay">My Name is John</div>
-      </div>
-      <h6>BITS ORGANIZING COMMITTEE</h6>
-    </li>
-
-    <li class="flex-item" style="background-color: rgb(17, 236, 163);">
+    <li class="flex-item">
       <div class="container1">
         <img src="static/images/download.jpeg" alt="Avatar" class="image">
         <div class="overlay">My Name is John</div>
@@ -63,7 +69,15 @@ change_theme: true
       <h6>BITS ORGANIZING COMMITTEE</h6>
     </li>
 
-    <li class="flex-item" style="background-color: rgb(17, 236, 163);">
+    <li class="flex-item">
+      <div class="container1">
+        <img src="static/images/download.jpeg" alt="Avatar" class="image">
+        <div class="overlay">My Name is John</div>
+      </div>
+      <h6>BITS ORGANIZING COMMITTEE</h6>
+    </li>
+
+    <li class="flex-item">
       <div class="container1">
         <img src="static/images/download.jpeg" alt="Avatar" class="image">
         <div class="overlay">My Name is John</div>
