--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,12 +6,31 @@ js: static/JS/leaderboard.js
 change_theme: true
 ---
   
-<div class="row task-list" id="row1">
+<!--<div class="row task-list" id="row1">
 
     {% for person in site.data.leaderboard %}
     <div class="tasks">
-        <h5>{{person.name}}<span><h5 class="age">{{person.class}}<span><h5 class="marks">{{person.marks}}</h5></span></h5></span></h5> 
+        <h5>{{person.name}}<span><h5 class="class">{{person.class}}<span><h5 class="marks">{{person.marks}}</h5></span></h5></span></h5> 
     </div>
     {% endfor %}
   
-  </div>
+  </div> --> 
+
+
+  
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Class</th>
+      <th>Points</th>
+    </tr>
+    {% for person in site.data.leaderboard %}
+    <tr>
+      <td>{{person.name}}</td>
+      <td>{{person.class}}</td>
+      <td>{{person.marks}}</td>
+    </tr>
+    {% endfor %}
+  </table>
+
+  
