--- a/about.html
+++ b/about.html
@@ -9,9 +9,8 @@ change_theme: true
 <div class="bits">
     <div class="info">
       <h1>BITS</h1>
-      <p>BITS, The Intra-School task-based ICT competition is organized by the Ananda College ICT Society
-        for the first time in Sri Lanka with the intention of providing a platform for our school students and polish
-        their IT knowledge in the different fields of ICT.</p>
+      <p>BITS, The First-Ever Task-Based Intra-School ICT competition, organized by the Ananda College ICT Society to
+      provide a platform for our school's students to polish and improve their ICT knowledge in many fields of ICT.</p>
     </div>
 </div>
 
