--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: BITS 2020 HOME
+title: ABOUT
 css: static/CSS/about.css
 js: static/JS/about.js
 change_theme: true
@@ -18,47 +18,67 @@ change_theme: true
   <ul class="flex-container">
     <li class="flex-item">
       <div class="container1">
-        <img src="https://i.imgur.com/FmEohvm.png" alt="Avatar" class="image">
+        <img src="static/images/chamindu.png" alt="Avatar" class="image">
         <div class="overlay">
           <p>Chamindu Jayanath</p>
           <ul class="pros">
             <li>Google Code-In 2019 Winner</li>
-            <li>Programmner</li>
+            <li>BITS 2019 Winner</li>
+            <li>Programmer</li>
             <li>Web Developer</li>
           </ul>
         </div>
       </div>
-      <h6>BITS ORGANIZING COMMITTEE</h6>
+      <h6> MAIN PROJECT COORDINATOR</h6>
     </li>
 
     <li class="flex-item">
       <div class="container1">
         <img src="static/images/download.jpeg" alt="Avatar" class="image">
+        <div class="overlay">Chamuthu</div>
+      </div>
+      <h6>PROJECT SUB-COORDINATOR</h6>
+    </li>
+
+    <li class="flex-item">
+      <div class="container1">
+        <img src="static/images/gothira.jpeg" alt="Avatar" class="image">
         <div class="overlay">
-          <p>Chamindu Jayanath</p>
+          <p>Gothira Mendis</p>
           <ul class="pros">
-            <li>gci winnner</li>
+            <li>BITS 2018 Winner</li>
             <li>Programmner</li>
-            <li>Web developer</li>
+            <li>NOI 2019 Finalist</li>
           </ul>
         </div>
       </div>
-      <h6>BITS ORGANIZING COMMITTEE</h6>
+      <h6>ORGANIZING COMMITTEE</h6>
     </li>
 
     <li class="flex-item">
       <div class="container1">
-        <img src="static/images/download.jpeg" alt="Avatar" class="image">
+        <img src="static/images/linuka.jpeg" alt="Avatar" class="image">
         <div class="overlay">
-          <p>Chamindu Jayanath</p>
+          <p>Linuka Tehan</p>
           <ul class="pros">
-            <li>Google Code-In 2019 Winner</li>
             <li>Programmner</li>
-            <li>Web developer</li>
           </ul>
         </div>
       </div>
-      <h6>BITS ORGANIZING COMMITTEE</h6>
+      <h6>ORGANIZING COMMITTEE</h6>
+    </li>
+
+    <li class="flex-item">
+      <div class="container1">
+        <img src="static/images/gasith.png" alt="Avatar" class="image">
+        <div class="overlay"> <p>Gasith Sanduwara</p> 
+          <ul class="pros">
+            <li>YCS 2017 Merit Award</li>
+            <li>Web Developer</li>
+          </ul>
+        </div>
+      </div>
+      <h6>ORGANIZING COMMITTEE</h6>
     </li>
 
     <li class="flex-item">
@@ -66,23 +86,22 @@ change_theme: true
         <img src="static/images/download.jpeg" alt="Avatar" class="image">
         <div class="overlay">My Name is John</div>
       </div>
-      <h6>BITS ORGANIZING COMMITTEE</h6>
+      <h6>ORGANIZING COMMITTEE</h6>
     </li>
 
     <li class="flex-item">
       <div class="container1">
-        <img src="static/images/download.jpeg" alt="Avatar" class="image">
-        <div class="overlay">My Name is John</div>
+        <img src="static/images/jayasahan.jpeg" alt="Avatar" class="image">
+        <div class="overlay">Jayasahan Hansana
+          <ul class="pros">
+            <li>UI / UX designer</li>
+            <li>Software developer</li>
+            <li>AI developer</li>
+            <li>IT support specialist (certified)</li>
+          </ul>
+        </div>
       </div>
-      <h6>BITS ORGANIZING COMMITTEE</h6>
-    </li>
-
-    <li class="flex-item">
-      <div class="container1">
-        <img src="static/images/download.jpeg" alt="Avatar" class="image">
-        <div class="overlay">My Name is John</div>
-      </div>
-      <h6>BITS ORGANIZING COMMITTEE</h6>
+      <h6>ORGANIZING COMMITTEE</h6>
     </li>
   </ul>
 
