--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: BITS 2020 HOME
+title: CONTACT
 css: static/CSS/contact.css
 js: static/JS/contact.js
 change_theme: true
