--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: BITS 2020 HOME
+title: BITS 2020
 css: static/CSS/index.css
 js: static/JS/index.js
 ---
@@ -8,7 +8,7 @@ js: static/JS/index.js
 <div class="main">
   <h1>BITS 2020</h1>
   <p>The Task Based Online Intra-School ICT Competiton</p>
-  <button type="button" class="btn btn-primary">Register</button>
+  <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfyiQFQWdhvyFRMa-D1eAhWVCC6w_z0ycWBBOnq7MgBxDXsGw/viewform?fbzx=-310011898092864180" target="_blank">Register</a>
   <section class="icon-down">
     <a href="#info">
       <span class="material-icons">
