--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: BITS 2020 HOME
+title: LEADERBOARD
 css: static/CSS/leaderboard.css
 js: static/JS/leaderboard.js
 change_theme: true
