--- a/onlinetest.html
+++ b/onlinetest.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: BITS 2020 HOME
+title: ONLINE TEST
 css: static/CSS/onlinetest.css
 js: static/JS/onlinetest.js
 change_theme: true
