--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@ change_theme: true
             </a>
             <a class="social-icon social-icon--call" href="tel:0711436311">
               <i class="fas fa-phone fa-xs"></i>
-              <div class="tooltip">call</div>
+              <div class="tooltip"><div class="num">call ( 0711436311 )</div></div>
             </a>
           </div>
     </li>
@@ -82,7 +82,7 @@ change_theme: true
             </a>
             <a class="social-icon social-icon--call" href="tel:0702914804">
               <i class="fas fa-phone fa-xs"></i>
-              <div class="tooltip">call</div>
+              <div class="tooltip"><div class="num">call ( 0702914804 )</div> </div>
             </a>
           </div>
     </li>
