--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@ change_theme: true
             <li>BITS 2019 Winner</li>
             <li>Programmer</li>
             <li>Web Developer</li>
+            <li>UX Designer</li>
           </ul>
         </div>
       </div>
@@ -33,8 +34,13 @@ change_theme: true
 
     <li class="flex-item">
       <div class="container1">
-        <img src="static/images/download.jpeg" alt="Avatar" class="image">
-        <div class="overlay">Chamuthu</div>
+        <img src="static/images/chamuthu.jpeg" alt="Avatar" class="image">
+        <div class="overlay"> <p>Chamuthu Edirisooriya</p> 
+          <ul class="pros">
+            <li>Graphic Designer</li>
+            <li>Web Developer</li>
+            <li>Programmer</li>
+          </ul></div>
       </div>
       <h6>PROJECT SUB-COORDINATOR</h6>
     </li>
@@ -48,6 +54,20 @@ change_theme: true
             <li>BITS 2018 Winner</li>
             <li>Programmner</li>
             <li>NOI 2019 Finalist</li>
+          </ul>
+        </div>
+      </div>
+      <h6>ORGANIZING COMMITTEE</h6>
+    </li>
+
+    <li class="flex-item">
+      <div class="container1">
+        <img src="static/images/manula.png" alt="Avatar" class="image">
+        <div class="overlay">
+          <p>Manula Thejan</p>
+          <ul class="pros">
+            <li>Programmer</li>
+            <li>Graphic Designer</li>
           </ul>
         </div>
       </div>
@@ -82,7 +102,7 @@ change_theme: true
 
     <li class="flex-item">
       <div class="container1">
-        <img src="static/images/download.jpeg" alt="Avatar" class="image">
+        <img src="static/images/vector.png" alt="Avatar" class="image">
         <div class="overlay">My Name is John</div>
       </div>
       <h6>ORGANIZING COMMITTEE</h6>
@@ -90,8 +110,8 @@ change_theme: true
 
     <li class="flex-item">
       <div class="container1">
-        <img src="static/images/jayasahan.jpeg" alt="Avatar" class="image">
-        <div class="overlay">Jayasahan Hansana
+        <img src="static/images/vector.png" alt="Avatar" class="image">
+        <div class="overlay"> <p>Jayasahan Hansana</p> 
           <ul class="pros">
             <li>UI / UX designer</li>
             <li>Software developer</li>
