--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@ change_theme: true
           <p>Gothira Mendis</p>
           <ul class="pros">
             <li>BITS 2018 Winner</li>
-            <li>Programmner</li>
+            <li>Programmer</li>
             <li>NOI 2019 Finalist</li>
           </ul>
         </div>
@@ -80,7 +80,7 @@ change_theme: true
         <div class="overlay">
           <p>Linuka Tehan</p>
           <ul class="pros">
-            <li>Programmner</li>
+            <li>Programmer</li>
           </ul>
         </div>
       </div>
@@ -114,9 +114,9 @@ change_theme: true
         <div class="overlay"> <p>Jayasahan Hansana</p> 
           <ul class="pros">
             <li>UI / UX designer</li>
-            <li>Software developer</li>
-            <li>AI developer</li>
-            <li>IT support specialist (certified)</li>
+            <li>Software Developer</li>
+            <li>AI Developer</li>
+            <li>IT Support Specialist (Certified)</li>
           </ul>
         </div>
       </div>
