--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
 ---
 layout: default
-title: BITS 2020
-css: static/CSS/index.css
-js: static/JS/index.js
+title: TASKS
+css: static/CSS/tasks.css
+js: static/JS/tasks.js
+change_theme: true
 ---
 
-<div class="main">
-  <h1>BITS 2020</h1>
-  <p>The Task Based Online Intra-School ICT Competiton</p>
-  <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfyiQFQWdhvyFRMa-D1eAhWVCC6w_z0ycWBBOnq7MgBxDXsGw/viewform?fbzx=-310011898092864180" target="_blank">Register</a>
-  <section class="icon-down">
-    <a href="#info">
-      <span class="material-icons">
-        arrow_downward
-      </span>
-    </a>
-  </section>
+
+<div class="row task-list" id="row1">
+  {% for task in site.data.tasks %}
+  <div class="tasks task-cat {{task.category}}">
+    
+    <h4>{{task.caption}}</h4>
+    <p>{{task.description}}</p>
+    <div class="buttons">
+      <a class="btn btn-info" href="{{task.pdfURL}}" id="catocery">Task
+        Information</a>
+        <a class="btn btn-success" href="{{task.submitURL}}" id="catocery">Submit Task</a>
+      <button type="button" class="btn btn-primary" id="catocery">{{task.category}}</button>
+    </div>
+  
+</div>
+  {% endfor %}
 </div>
 
-<!-- <div class="logo"> -->
-<!-- <img src="./static/images/BITS-logo.gif" /> -->
-<!-- </div> -->
-
-<div class="info" id="info">
-  <section class="description">
-    <h6>
-      BITS, The First-Ever Task-Based Intra-School ICT competition, organized by the Ananda College ICT Society to
-      provide a platform for our school's students to polish and improve their ICT knowledge in many fields of ICT.
-    </h6>
-  </section>
-</div>
 
