--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@ change_theme: true
 
     <li class="flex-item">
       <div class="container1">
-        <img src="static/images/vector.png" alt="Avatar" class="image">
+        <img src="static/images/chamod.png" alt="Avatar" class="image">
         <div class="overlay"> <p>Chamod Madushan</p> 
           
         </div>
