Add chamuthu's details

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@ change_theme: true
     </li>
     <li class="call">
         <h6>BITS OC</h6>
-        <h5>Chamuthu</h5>
+        <h5>Chamuthu Edirisooriya</h5>
         <hr>
         <p class="contact">CONTACT</p>
         <div class="social-icons" style="font-size: 0.5rem;">
@@ -72,7 +72,7 @@ change_theme: true
               <div class="tooltip">Github</div>
             </a>
             
-            <a class="social-icon social-icon--email" href="https://github.com/" target="_blank">
+            <a class="social-icon social-icon--email" href="mailto:chamuthuedirisooriya030828@gmai.com" target="_blank">
               <i class="fas fa-envelope fa-xs"></i>
               <div class="tooltip">EMail</div>
             </a>
