--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@ change_theme: true
   {% for task in site.data.tasks %}
   <div class="tasks task-cat {{task.category}}">
     
-    <h4>{{task.caption}}</h4>
+    <h4>{{task.caption}} <button type="button" class="btn btn-primary" id="id">Task ID : {{task.id}} </button></h4>
     <p>{{task.description}}</p>
+    
     <div class="buttons">
+
       <a class="btn btn-info" href="{{task.pdfURL}}" id="catocery">Task
         Information</a>
         <a class="btn btn-success" href="{{task.submitURL}}" id="catocery">Submit Task</a>
-      <button type="button" class="btn btn-primary" id="catocery">{{task.category}}</button>
+      <button type="button" class="btn btn-primary" id="catocery">{{task.category}} </button>
     </div>
   
 </div>
   {% endfor %}
+
 </div>
