--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@ change_theme: true
 
 
 <div class="row task-list" id="row1">
+
+  <div class="tasks important">
+    <h4><b>IMPORTANT</b></h4>
+    <h4>HTML, CSS and JavaScript Coding Webinar - 01<button type="button" class="btn btn-primary" id="id">Task ID: CD01</button></h4>
+    <p>A 2 hour coding session on the 15th of June [Monday]
+      from 6.00 pm to 8.00 pm, for all BITS Paticipants
+      on HTML, CSS and JavaScript. All who participate can
+      earn additional points.
+    </p>
+    <div class="buttons">
+
+      <a class="btn btn-info" href="https://drive.google.com/file/d/1i439a9PV5CInM7T05lYQK94rZZwdl39A/view?usp=sharing" id="catocery">More
+        Information</a>
+        <a class="btn btn-success" onclick="alertmeeting()">Go to Meeting</a>
+      <button type="button" class="btn btn-primary" id="catocery">Code & Design</button>
+    </div>
+  
+</div>
+
   {% for task in site.data.tasks %}
   <div class="tasks task-cat {{task.category}}">
     
