--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@ change_theme: true
 
 <div class="row task-list" id="row1">
 
+  <div class="tasks important" style="background-color: rgb(0, 5, 75);">
+    <h4> <b>The first Online Test is live now !</b> <button type="button" class="btn btn-primary" id="id">Online Test</button></h4>
+    <p style="width: 80%;">
+      There are 4 online tests for BITS participants. You can participate in these tests and score a high number of points.
+      It will help you on your way to The Winner Of BITS 2020. The first online test in now open. Take the test and claim your points !. 
+      Every online test will be available only for 12 hours and be sure to participate before it expires.
+    </p>
+    <div class="buttons">
+
+      <a class="btn btn-info" href="./onlinetest.html" id="catocery">Visit Tests</a>
+    </div>
+  
+</div>
+
   <div class="tasks important">
     <h4><b>IMPORTANT</b></h4>
     <h4>HTML, CSS and JavaScript Coding Webinar - 01<button type="button" class="btn btn-primary" id="id">Task ID: CD01</button></h4>
